v1.10.x/how-to-guides/index.mdx
---
title: How-to Guides | Official Documentation to User Guides
description: Step-by-step guidance for how to guides using OpenMetadata. Learn key actions, features, and best practices.
slug: /how-to-guides
sidebarTitle: How-to Guides
---

<div className="how-to-guides-container">

# How-to Guides

The How-to Guides will give you a walk through on accomplishing the basic to the most advanced things in OpenMetadata. These step-by-step guides will help get an overview of the features and also help explore the various functionalities.

## Agentic Metadata Management
Use LLMs and GenAI agents for automation and intelligent data management within OpenMetadata

<Columns cols={2}>
<Card icon='/public/images/icons/mcp.svg' title="MCP Server" href="/v1.10.x/how-to-guides/mcp" horizontal>
  Enable AI agent communication with metadata to add context and take intelligent and automated action
</Card>
</Columns>
## Features in OpenMetadata

OpenMetadata is a complete package for data teams to break down team silos, share data assets from multiple sources securely, collaborate around reliable data, and build a documentation-first data culture in the organization.

<Columns cols={2}>
<Card icon='/public/images/icons/data-contracts.svg' title="Data Contracts" href="/v1.10.x/how-to-guides/data-contracts" horizontal>
  Formalize agreements that keep data consumers and producers aligned.
</Card>
<Card icon='/public/images/icons/data-discovery.svg' title="Data Discovery" href="/v1.10.x/how-to-guides/data-discovery" horizontal>
  Discover the right data assets to make timely business decisions.
</Card>
<Card icon='/public/images/icons/data-collaboration.svg' title="Data Collaboration" href="/v1.10.x/how-to-guides/data-collaboration" horizontal>
  Foster data team collaboration to enhance data understanding.
</Card>
<Card icon="/public/images/icons/data-quality.svg" title="Data Quality & Observability" href="/v1.10.x/how-to-guides/data-quality-observability" horizontal>
  Trust your data with quality tests & monitor the health of your data systems.
</Card>
<Card icon='/public/images/icons/data-lineage.svg' title="Data Lineage" href="/v1.10.x/how-to-guides/data-lineage" horizontal>
  Trace the path of data across tables, pipelines, and dashboards.
</Card>
<Card icon='/public/images/icons/data-insights.svg' title="Data Insights" href="/v1.10.x/how-to-guides/data-insights" horizontal>
  Define KPIs and set goals to proactively hone the data culture of your company.
</Card>
<Card icon='/public/images/icons/data-governance.svg' title="Data Governance" href="/v1.10.x/how-to-guides/data-governance" horizontal>
  Enhance your data platform governance using OpenMetadata.
</Card>
</Columns>

## Quick Start Guides

<Columns cols={2}>
<Card icon='/public/images/icons/admin-guide.svg' title="Admin Guide" href="/v1.10.x/how-to-guides/admin-guide" horizontal>
  Admin users can get started with OpenMetadata with just three quick and easy steps & know-it-all with the advanced guides.
</Card>
<Card icon='/public/images/icons/data-user.svg' title="Guide for Data Users" href="/v1.10.x/how-to-guides/guide-for-data-users" horizontal>
  Get to know the basics of OpenMetadata and about the data assets that you can explore in the all-in-one platform.
</Card>
</Columns>

<div className="getting-started-container">

## How OpenMetadata helps Data Teams?

OpenMetadata is a complete package for data teams to break down team silos, share data assets from multiple sources securely, collaborate around data, and build a documentation-first data culture in the organization.

- Centralized, **Single Source of Truth** for all your metadata.

- **[Discover](/how-to-guides/data-discovery)** the right assets in time and reduce dependencies.

- Foster **[Team Collaboration](/how-to-guides/data-collaboration)** with conversations, tasks, announcements, and alerts in real time.

- Build trust in your data with **[Data Quality Tests](/how-to-guides/data-quality-observability)** to ensure completeness and accuracy.

- Track your data evolution with end-to-end **[Data Lineage](/how-to-guides/data-lineage)**.

- Secure access to sensitive data by defining **[Roles and Policies](/how-to-guides/admin-guide/roles-policies)**.

- Enhance organizational **[Data Culture](/how-to-guides/data-insights)** to gain crucial insights to drive innovation.

- Define your **[Glossary](/how-to-guides/data-governance/glossary)** to build a common understanding of terms within your organization.

- Implement **[Data Governance](/how-to-guides/data-governance)** to maintain data integrity, security, and compliance.

</div>

</div>
